init mongoDB and postgresMigration