@@ -1,7 +1,8 @@
 package com.example.TestTaskForJavaCandidate.repository;
 
 import com.example.TestTaskForJavaCandidate.application.model.User;
-import com.example.TestTaskForJavaCandidate.repository.jpa.IActionUserJpaRepository;
+import com.example.TestTaskForJavaCandidate.repository.jpa.IActionUserMongoRepository;
+import com.example.TestTaskForJavaCandidate.repository.jpa.IActionUserPostgresRepository;
 import com.example.TestTaskForJavaCandidate.repository.jpa.entity.UserEntity;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -9,7 +10,6 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -22,27 +22,44 @@ import static org.mockito.Mockito.when;
 public class ActionUserRepositoryTest {
 
     @Mock
-    private IActionUserJpaRepository actionUserJpaRepository;
+    private IActionUserPostgresRepository actionUserJpaRepository;
+
+    @Mock
+    private IActionUserMongoRepository actionUserMongoRepository;
 
     @InjectMocks
     private ActionUserRepository actionUserRepository;
 
     @Test
-    public void getAllUsers_ShouldReturnListOfUsers() {
+    public void testGetAllUsers() {
         // given
-        UserEntity userEntity1 = new UserEntity(UUID.randomUUID(), "johndoe1", "John1", "Doe1"); // Assuming default constructor and setters
-        UserEntity userEntity2 = new UserEntity(UUID.randomUUID(), "johndoe2", "John2", "Doe2"); // Setup userEntity1 and userEntity2 with test data
-        when(actionUserJpaRepository.findAll()).thenReturn(Arrays.asList(userEntity1, userEntity2));
+        UserEntity postgresUser = new UserEntity(UUID.randomUUID(), "johndoe1", "John1", "Doe1");
+        UserEntity mongoUser = new UserEntity(UUID.randomUUID(), "johndoe2", "John2", "Doe2");
+
+        when(actionUserJpaRepository.findAll()).thenReturn(List.of(postgresUser));
+        when(actionUserMongoRepository.findAll()).thenReturn(List.of(mongoUser));
 
         // when
         List<User> result = actionUserRepository.getAllUsers();
 
         // then
-        assertNotNull(result);
         assertEquals(2, result.size());
 
-        // Additional assertions can be added to verify the mapping
         verify(actionUserJpaRepository).findAll();
+        verify(actionUserMongoRepository).findAll();
         verifyNoMoreInteractions(actionUserJpaRepository);
+    }
+
+    @Test
+    public void getAllUsers_ShouldThrowException() {
+        // given
+        RuntimeException exception = new RuntimeException("Database error");
+        when(actionUserJpaRepository.findAll()).thenThrow(exception);
+
+        // when
+        assertThrows(RuntimeException.class, () -> actionUserRepository.getAllUsers());
+
+        // then
+        verify(actionUserJpaRepository).findAll();
     }
 }
